Fix footer for better visibility.

--- a/public/resources/styles/custom.css
+++ b/public/resources/styles/custom.css
@@ -15,7 +15,7 @@ h3, h4, h5 {
     padding-left: 30px;
     padding-right: 30px;
     padding-top: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
     background-color: #f9f2e7;
 }
 
@@ -33,7 +33,12 @@ h3, h4, h5 {
 }
 
 #footer {
-    background-color: rgba(24, 20, 22, 0.6);
+    border-style: solid;
+    border-width: 1px;
+    border-bottom: none;
+    border-left: none;
+    border-right: none;
+    padding-top: 10px;
 }
 
 .index h1 {
